Add images and hypertext

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -9,11 +9,26 @@
 
   <h3>People</h3>
   <ul>
-    <li>My brother Christopher</li>
+    <li>
+      <a href="http://www.example.com/christopher.html">
+       My brother <strong>Christopher</strong>
+       <img src="img/Chris_Ruhm_H.jpg" alt="Photo of Christopher">
+      </a>
+  </li>
     <li>My mom and dad:
       <ul>
-        <li>Steve</li>
-        <li>Carol</li>
+        <li>
+          <a href="http://www.example.com/steve.html">
+            <strong>Steve</strong>
+            <img src="img/steve-jobs--david-paul-morrisbloomberg-via-getty-images.jpg" alt="Photo of Steve">
+           </a>
+          </li>
+        <li>
+          <a href="http://www.example.com/carol.html">
+            <strong>Carol</strong>
+            <img src="img/download.jpg" alt="Photo of Carol">
+        </a>
+        </li>
       </ul>
     </li>
     <li>My friend Jessica</li>
