Add website links

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -15,7 +15,8 @@
        <img src="img/Chris_Ruhm_H.jpg" alt="Photo of Christopher">
       </a>
   </li>
-    <li>My mom and dad:
+    <li>
+      <em>My mom and dad:</em>
       <ul>
         <li>
           <a href="http://www.example.com/steve.html">
@@ -43,6 +44,21 @@
     <li>Black licorice (really!)</li>
   </ol>
 
+  <h3>Favorite websites</h3>
+  <p>These are a few of my favorite <em>websites</em></p>
+  <ul>
+    <li>
+      <a href="http://www.google.com">
+        Google
+      </a>
+    </li>
+    <li>
+      <a href="http://www.yahoo.com">
+        Yahoo
+      </a>
+    </li>
+    <li></li>
+  </ul>
   <p>Thanks for reading about me!</p>
 </body>
 </html>
