--- a/favorite-things.html
+++ b/favorite-things.html
@@ -58,7 +58,11 @@
         Yahoo
       </a>
     </li>
-    <li></li>
+    <li>
+      <a href="http://www.bing.com">
+        Bing
+      </a>
+    </li>
   </ul>
   <p>Thanks for reading about me!</p>
 </body>
