add new stylesheet

--- a/favorite-places.html
+++ b/favorite-places.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
   <title>My favorite places</title>
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link href="css/styles1.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <h1>My favorite places</h1>
