--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -18,5 +18,9 @@
     <li>Javascript</li>
     <li>And a lot more!</li>
   </ul>
+
+  <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
+  <p>Here is a link to my <a href="favorite-places.html">favorite places</a>.</p>
+  
 </body>
 </html>
