--- a/favorite-places.html
+++ b/favorite-places.html
@@ -14,7 +14,7 @@
     
     <li>
       The shops of Brighton Beach, NY
-      <img src="img/brightonbeach.jpeg" alt="The shops">
+      <img src="img/brightonbeachshops.jpeg" alt="The shops">
     </li>
   </ul>
 </body>
